Update Historic Data Analysis.ipynb

--- a/Historic Data Analysis.ipynb
+++ b/Historic Data Analysis.ipynb
@@ -426,7 +426,7 @@
     "import requests\n",
     "\n",
     "#DELETE API KEY\n",
-    "call = 'http://apilayer.net/api/historical?access_key=b9ab7396a612608ec0a123a4d9c7a567&date=2018-12-30'\n",
+    "call = 'http://apilayer.net/api/historical?access_key=########################&date=2018-12-30'\n",
     "def data_import(call):   #can make call more versatile by creating access_key arg, base_url arg, and parameters kwargs\n",
     "    r = requests.get(call)\n",
     "    print(type(r))\n",
